<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:title="@string/menu_profil"
        android:id="@+id/menu_profil"
        android:icon="@drawable/ic_baseline_account_circle"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint = "@android:color/white"/>


    <item
        android:title="@string/menu_progect"
        android:id="@+id/menu_progect"
        android:icon="@drawable/ic_baseline_work_24"
        app:showAsAction="always" />

    <item
        android:title="@string/menu_contact"
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_baseline_contacts_24"
        app:showAsAction="always" />

    <item
        android:title="@string/menu_settings"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"/>



</menu>